tests/baselines/reference/implementsIncorrectlyNoAssertion.errors.txt
tests/cases/compiler/implementsIncorrectlyNoAssertion.ts(9,5): error TS2421: Class member of type 'number' is not assignable to implementing interface member of type 'string'.


==== tests/cases/compiler/implementsIncorrectlyNoAssertion.ts (1 errors) ====
    declare class Foo {
        x: string;
    }
    declare class Bar {
        y: string;
    }
    type Wrapper = Foo & Bar;
    class Baz implements Wrapper {
        x: number;
        ~
!!! error TS2421: Class member of type 'number' is not assignable to implementing interface member of type 'string'.
        y: string;
    }
    